@@ -1,3 +1,8 @@
+2006-11-11 Raphael Neider <rneider AT web.de>
+
+	* src/pic/pcode.c (newpCodeOpBit): search SymbolTab for referenced
+	  bitfield symbols, fixes #1579535 (once more...).
+
 2006-11-09 Frieder Ferlemann <Frieder.Ferlemann AT web.de>
 
 	* support/regression/generate-cases.py,
